Added <script> alert

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<head>
 
 			<title> JavaScript Adventure Game </title>
-			
+			<script> alert("Howdy Y'all! Welcome to my page!");</script>
 		</head>
 
 		<body>
